<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/driving_license_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/licence_expiry_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/et_licence_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edit_text_shape"

        android:hint="YYYY-MM-DD"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date"
        android:paddingHorizontal="@dimen/_13sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"

        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/upload_driving_license"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/tv_licence_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_light9"
                android:gravity="center_vertical"
                android:hint="@string/no_file_chosen"
                android:paddingStart="@dimen/_13sdp"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_11ssp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_upload_licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:drawableStart="@drawable/ic_upload"
                android:drawablePadding="@dimen/_6sdp"

                android:padding="@dimen/_8sdp"
                android:text="@string/choose_file"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/update"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_8sdp" />

</LinearLayout>