<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:orientation="vertical">


        <!-- Profile Picture Section -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/img_no_profile"
                app:civ_border_color="@color/primary_transparent"
                app:civ_border_width="2dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:backgroundTint="@color/primary"
                app:fabCustomSize="@dimen/_30sdp"
                app:maxImageSize="@dimen/_15sdp"
                app:srcCompat="@drawable/icn_edit"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <!-- Basic Details Card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/basic_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <ImageButton
                android:id="@+id/tv_edit"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icn_edit"
                app:tint="@color/primary"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp"
            app:strokeColor="@color/divider_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_12sdp">

                <include
                    android:id="@+id/rowName"
                    layout="@layout/layout_detail_row" />

                <View style="@style/Divider" />

                <include
                    android:id="@+id/rowPhoneNumber"
                    layout="@layout/layout_detail_row" />
                <!--            <View style="@style/Divider" />-->
                <!--            <include layout="@layout/layout_detail_row" android:id="@+id/rowAltPhoneNumber"/>-->
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Driving License Details Card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/driving_license_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <ImageButton
                android:id="@+id/tv_edit_doc"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icn_edit"
                app:tint="@color/primary"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp"
            app:strokeColor="@color/divider_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingBottom="@dimen/_5sdp">

                <!-- License Image Section -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/driving_license_image"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_11ssp" />

                <ImageView
                    android:id="@+id/iv_licence"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@color/gray_text2"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/img_no_profile" />


                <View style="@style/Divider" />

                <include
                    android:id="@+id/rowLicenceExpiry"
                    layout="@layout/layout_detail_row" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Spacer to push version to the bottom -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Version Number at the bottom -->
        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10ssp"
            tools:text="Version 1.0.0" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>